--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=VorteXtream-BACK_END-SpringBoot
+spring.datasource.url=jdbc:postgresql://blnygmwbbwhy6jhmcy1m-postgresql.services.clever-cloud.com:50013/blnygmwbbwhy6jhmcy1m
+spring.datasource.username=ucvkp4ds8cvv6htripsj
+spring.datasource.password=hbwre52O8EgeHWgYrSQRyeDixiw2Zs
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+## Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
