add jdbc mysql connection datasource

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=VorteXtream-BACK_END-SpringBoot
-spring.datasource.url=jdbc:postgresql://blnygmwbbwhy6jhmcy1m-postgresql.services.clever-cloud.com:50013/blnygmwbbwhy6jhmcy1m
-spring.datasource.username=ucvkp4ds8cvv6htripsj
-spring.datasource.password=hbwre52O8EgeHWgYrSQRyeDixiw2Zs
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://mysql-ab2d1a7-jerocruz76-0502.d.aivencloud.com:24773/vorteXtream
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_706xZL_sSc1a2VGnWP9
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Dialect
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
