add categories and cast services

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://mysql-ab2d1a7-jerocruz76-0502.d.aivencloud.co
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_706xZL_sSc1a2VGnWP9
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.initialization-mode=always
 
 ## Dialect
 
