--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,12 +1,21 @@
 spring.application.name=VorteXtream-BACK_END-SpringBoot
 spring.datasource.url=jdbc:mysql://mysql-ab2d1a7-jerocruz76-0502.d.aivencloud.com:24773/vorteXtream
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_706xZL_sSc1a2VGnWP9
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode=always
 
 ## Dialect
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
+
+## Port
+
+server.port=${PORT}
+
+## Cloudinary
+
+cloudinary.url=${CLOUDINARY_URL}
+cloudinary.config.secure=true
