--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -19,3 +19,17 @@ server.port=${PORT}
 
 cloudinary.url=${CLOUDINARY_URL}
 cloudinary.config.secure=true
+
+## Swagger nbv
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/com.riwi.VorteXtream_BACK_END_SpringBoot.Infrastructure.Controllers
+
+springdoc.api-docs.info.title=Mi API Documentada
+springdoc.api-docs.info.description=Esta es la documentación de mi API RESTful.
+springdoc.api-docs.info.version=1.0.0
+
+springdoc.swagger-ui.enabled=true
+
+springdoc.swagger-ui.urls[0].name=Servidor local
+springdoc.swagger-ui.urls[0].url=com.riwi.VorteXtream_BACK_END_SpringBoot.Infrastructure.Controllers
