add corrections in the project environment

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -23,13 +23,13 @@ cloudinary.config.secure=true
 ## Swagger nbv
 
 springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/com.riwi.VorteXtream_BACK_END_SpringBoot.Infrastructure.Controllers
+springdoc.swagger-ui.path=/com.riwi.VorteXtream_BACK_END_SpringBoot.Adapters.Controllers
 
 springdoc.api-docs.info.title=Mi API Documentada
-springdoc.api-docs.info.description=Esta es la documentación de mi API RESTful.
+springdoc.api-docs.info.description=Esta es la documentaciï¿½n de mi API RESTful.
 springdoc.api-docs.info.version=1.0.0
 
 springdoc.swagger-ui.enabled=true
 
 springdoc.swagger-ui.urls[0].name=Servidor local
-springdoc.swagger-ui.urls[0].url=com.riwi.VorteXtream_BACK_END_SpringBoot.Infrastructure.Controllers
+springdoc.swagger-ui.urls[0].url=com.riwi.VorteXtream_BACK_END_SpringBoot.Adapters.Controllers
